--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.4",
     "@hot-loader/react-dom": "^16.11.0",
+    "@testing-library/dom": "^7.24.3",
     "@testing-library/jest-dom": "^5.11.3",
     "@testing-library/react": "^10.4.8",
     "@testing-library/react-hooks": "^3.4.1",
+    "@testing-library/user-event": "^12.1.6",
     "@types/jest": "^26.0.10",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
